# trsproc

./: LICENSE  MANIFEST.ini  README.md  __init__.py  parsing_trs.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  trsproc.py  utils_trsproc.py
src/: __init__.py  parsing_trs.py  trsproc.py  utils_trsproc.py
src/trsproc/: __init__.py  __main__.py  config.toml  parser.py  utils.py
